# mav-tg-crm

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: deploy.yml  ruff.yml
infra/: Dockerfile  config.toml  docker-compose.yaml  example.config.toml  init.sql
src/api/: config.py
src/api/application/: errors.py
src/api/application/enums/: base.py  project.py  role.py  task.py
src/api/application/schemas/: board.py  common.py  document.py  invite.py  participant.py  project.py  task.py  user.py  version.py
src/api/infra/database/: common.py  env.py  errors.py  provider.py  schema.py
src/api/infra/database/admin/: schema.py
src/api/infra/database/migrations/: env.py
src/api/infra/database/tables/: __init__.py  base.py  board.py  board_columns.py  document.py  project.py  projects.py  settings.py  task.py  user.py  users.py  version.py
src/api/main/: __init__.py  di.py
src/api/presentation/fastapi/: setup.py
src/api/presentation/fastapi/routes/: auth.py  board.py  (+9 more)
src/api/usecases/: base.py  provider.py
src/api/usecases/board/: __init__.py  delete.py  delete_board.py  get.py  get_board.py  update.py  update_board.py
src/api/usecases/column/: __init__.py  delete.py  delete_column.py  get.py  get_column.py  update.py  update_column.py
src/api/usecases/document/: __init__.py  delete.py  delete_document.py  get.py  get_document.py  update.py  update_document.py
src/api/usecases/participant/: __init__.py  delete.py  get.py  role.py
src/api/usecases/project/: __init__.py  delete_project.py  get.py  update.py
src/api/usecases/task/: __init__.py  delete.py  get.py  get_task.py  update_task.py
src/bot/: bot.py
src/bot/app/: keyboards.py
src/bot/app/handlers/: profile.py  project_info.py  projects.py  regist.py  settings.py  start.py  unknownmes.py
src/core/: config.py
(+94 files in other folders)
