[project]
name = "mav-tg-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "aiogram>=3.22.0",
    "dishka>=1.7.1",
    "dynaconf>=3.2.11",
    "fastapi>=0.117.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
    "structlog>=25.4.0",
    "uvicorn>=0.36.0",
]
